# congo-news-summarizer

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  download_model.py  models  news-summaries-2024-12-05.json  news-summaries-2024-12-10.json  news-summaries.json  news_summaries.json  notes.md  pyproject.toml  ruff.toml  scrpits  todo.md
.github/workflows/: docker-publish.yml
data/: 2024-11-06-news.csv  2025-08-18-news.csv  2025-08-19-news.csv  2025-10-9-news.csv
docker/: Dockerfile  Dockerfile-base  Dockerfile-nginx  docker-compose-generator.yaml  docker-compose-llama-server-local.yaml  docker-compose-llama-server.yaml  docker-compose-local.yaml  docker-compose-summarizer-local.yaml  docker-compose-summarizer.yaml  docker-compose.yaml
docker/nginx/: conf
flyte-k3d/: minio.yaml  postgres.yaml
news-summarizer/: news-summaries-2024-12-05.json
nginx/: conf
notebooks/: new-summarizer-clustering.ipynb  news-summarizer-generative-model.ipynb  playground.ipynb  second-approach-playground.ipynb  tweeter_playground.ipynb
scripts/: download_model.py
src/: _version.py  schemas.py
src/llm/: base.py  cloud_provider.md  generator.py  main.py  prompts.py  runner.py
src/shared/: cloud_storage.py  database.py  document_store.py  logger.py
src/shared/cloud_storage/: cloud_storage.py  cloud_storage_base.py  cloud_storage_non_numpy.py
src/summarizer/: Readme.md  cluster_modeler.py  data_puller.py  embeddings_computer.py  main.py  runner.py  summarizer_main.py
src/twitter/: main.py  tweet_from_json.py  twitter_client.py
summaries/: summaries_news-summaries-2024-12-06.json
tweeters/: README.md  client.py  requirements.txt  tweet_from_json.py  tweet_from_text.py
workflows/: clustering.py
